--- a/Scss/_media.scss
+++ b/Scss/_media.scss
@@ -114,7 +114,7 @@
         }
       }
       
-}
+    }
 
 }
 @media (width < 450px) {
@@ -123,4 +123,49 @@
             width: 90%;
         }
     }
+}
+@media (width < 320px) {
+    .h-video{
+        video{
+            width: 95%;
+        }
+    }
+    .h1-index{
+        font-size: $textLg;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .Frase-motivacional{
+        font-size: $textSm-1;
+    }
+    .certificados{
+        width: 80%;
+    }
+    .div-pago{
+        flex-direction: column;
+        width: 80%;
+        h4{
+            width: 90%;
+            font-size: $textLg;
+            margin-top: 40px;
+            margin-bottom: 20px;
+        }
+        .boton-pago {
+            flex-direction: column;
+            p {
+              font-size: $textSm;
+              width: 95%;
+              margin-top: 15px;
+            }
+          
+            .inscribirme-btn {
+              width: 60%;
+              margin-top: 20px;
+              margin-bottom: 35px;
+              font-size: $textMd;
+            }
+          }
+          
+        }
+
 }
