--- a/Scss/_media.scss
+++ b/Scss/_media.scss
@@ -48,6 +48,18 @@
         font-size: $textSm1;
         width: 85%;
     }
+    .h-video {
+     
+        .video-container{
+            video {
+              }
+            
+              button#toggleSonido {
+                  width: 25%;
+                
+              }
+        }
+    }
     
 }
 @media (width < 768px) {
@@ -121,6 +133,18 @@
     .h-video{
         video{
             width: 90%;
+        }
+    }
+    .h-video {
+     
+        .video-container{
+            video {
+              }
+            
+              button#toggleSonido {
+                  width: 45%;
+                
+              }
         }
     }
 }
