--- a/Scss/_vars.scss
+++ b/Scss/_vars.scss
@@ -16,9 +16,10 @@ $textMd:2rem;
 $textMd1:2.5rem;
 $textLg:3rem;
 $textLg-1:3.5rem;
-$textXl:5.2rem;
+$textXl:4.2rem;
 
 //font weight
+$fontQ:700;
 $fontP:500;
 $fontBold:400;
 $fontRegular:300;
