--- a/Scss/_commons.scss
+++ b/Scss/_commons.scss
@@ -1,5 +1,6 @@
 body{
-    background-image: url(../Imagenes/25865441-fondo-de-la-textura-de-cuero-beige-claro-con-dibujos-de-imitación.webp);
+    // background-image: url(../Imagenes/25865441-fondo-de-la-textura-de-cuero-beige-claro-con-dibujos-de-imitación.webp);
+    background-color: #E8E6DA;
     overflow-y: hidden;
     background-attachment: fixed;
     position: sticky;
@@ -25,13 +26,91 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
     video{
         width: 60%;
     }
 }
 
+.cajas{
+    color: $mainColor;
+    font-size: $textMd1;
+    margin-top: 20px;
+}  
+.qa {
+    overflow-y: hidden;
+    width: 80%;
+    margin: auto;
+    margin-top: 10px;
   
+    div {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 1rem;
+      div{
+        flex-direction: row;
+        align-items: center;
+        .check {
+            width: 30px;
+            color: $secondaryColor;
+            align-self: flex-start;
+            margin-right: 0.5rem;
+          }
+      
+          p {
+            width: 90%;
+            font-size: $textSm-1;
+            margin-bottom: 10px;
+          }
+      }
+    }
+  }
+
+.cajas-1{
+    margin-top: 25px;
+    font-size: $textMd1;
+    margin-bottom: 20px;
+    color: $mainColor;
+    span{
+        color: $secondaryColor;
+    }
+}
+.container{
+    figure{
+        img{
+            width: 80%;
+        }
+        .nombre-fig{
+            color: $mainColor;
+            margin-top: 5px;
+            font-size: $textSm-1;
+            font-weight: $fontQ;
+        }
+        .description{
+                color: $secondaryColor;
+                width: 80%;
+                margin: auto;
+                margin-bottom: 15px;
+            }
+        .precio-tachado{
+            text-decoration: line-through;
+            color: $mainColor;
+            font-size: $textSm-1;
+            margin-top: -8px;
+        }
+        .precio-descuento{
+            color: $mainColor;
+            font-size: $textSm-1;
+            margin-top: -10px;
+         }
+        }
+}
+
+
+.materiales{
+    width: 80%;
+    margin: auto;
+    margin-top: 10px;
+}
 
 h2{
     color: $secondaryColor;
@@ -44,22 +123,9 @@ h2{
 
 }
 
-.Frase-motivacional{
-    text-align: center;
-    font-size: $textMd;
-    background-color: $mainColor;
-    width: 80%;
-    margin: auto;
-    color: $keyColor;
-    border-radius: 10px;
-    padding-right: 10px;
-    padding-left: 10px;
-
-}
 .accordion{
     width: 80%;
     margin: auto;
-    border-radius: 10px;
     .accordion-item{
         .accordion-header{
             button{
@@ -74,6 +140,11 @@ h2{
                 p{
                     margin-top: 10px;
                     color: $mainColor;
+                    span{
+                        color: $mainColor;
+                        font-weight: bold;
+                        text-decoration: underline;
+                    }
                 }
             }
             .accordion-body{
@@ -96,19 +167,20 @@ h2{
 }
 
 .h1-index{
-    background-color: rgba(128, 128, 128, 0.3);
+    background-color: #E8E6DA;
     text-align: center;
-    font-weight: $fontP;
+    font-weight: $fontQ;
     color: $mainColor;
     font-size: $textXl;
-    text-shadow: 2px 2px 2px #000;
+    // text-shadow: 2px 2px 2px #000;
     span{
         color: $secondaryColor;
     }
-    margin-top: 10px;
-    margin-bottom: 5px;
+    margin-bottom: 0px;
     padding-top: 20px;
     padding-bottom: 20px;
+    padding-left: 8px;
+    padding-right: 8px;
 }
 
 .carrousel-box{
