--- a/Scss/_media.scss
+++ b/Scss/_media.scss
@@ -42,6 +42,7 @@
             }
           }
     }
+
 }
 @media (width < 1100px) {
     .Frase-motivacional{
@@ -49,6 +50,61 @@
         width: 85%;
     }
     
+}
+@media (width > 768px){
+    .qa {
+        width: 80%;
+        margin: auto;
+        margin-top: 10px;
+      
+        div {
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
+          margin-bottom: 1rem;
+          div{
+            flex-direction: row;
+            width: 40%;
+            flex-wrap: nowrap;
+            margin: auto;
+            margin-top: 15px;
+            justify-content: center;
+            .check {
+                width: 45px;
+                color: $secondaryColor;
+                align-self: flex-start;
+
+                margin-right: 0.5rem;
+              }
+          
+              p {
+                margin: 0;
+                margin-bottom: 15px;
+              }
+          }
+        }
+      }
+
+      .container{
+        figure{
+            img{
+                width: 80%;
+            }
+            .nombre-fig{
+                color: $mainColor;
+                margin-top: 5px;
+                font-size: $textSm;
+            }
+            .description{
+                    color: $secondaryColor;
+                    width: 80%;
+                    margin: auto;
+                    margin-bottom: 15px;
+                    font-size: $textSm-1;
+                }
+            }
+    }
+      
 }
 @media (width < 768px) {
     .h-video{
