--- a/Scss/_commons.scss
+++ b/Scss/_commons.scss
@@ -160,13 +160,17 @@ h2{
                 }
             }
             .imagen-certificado{
-                width: 90%;
+                width: 50%;
                 margin: auto;
             }
         }
     }
 }
 
+.accordion-body .figure-img {
+    max-width: 70%;
+    height: auto;
+  }
 .h1-index{
     background-color: #E8E6DA;
     text-align: center;
